--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_screenutil: ^5.0.0
   font_awesome_flutter: ^9.0.0
   google_fonts: ^2.0.0
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   flutter_test:
@@ -26,3 +27,4 @@ flutter:
 
   assets:
     - assets/lang/
+    - assets/images/
