--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,13 @@ dependencies:
   flutter_screenutil: ^5.0.0
   font_awesome_flutter: ^9.0.0
   google_fonts: ^2.0.0
+  provider: ^5.0.0
   url_launcher: ^6.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   lint: ^1.5.3
-  test: ^1.16.5
 
 flutter:
   uses-material-design: true
