--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: linkinbio
-description: Simple web page for share clickable links to individual pages or products in your social media accounts.
+description: Simple web page for share clickable links to individual pages or
+  products in your social media accounts.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
@@ -15,6 +16,7 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   google_fonts: ^2.0.0
   url_launcher: ^6.0.3
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
