--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,7 +1,5 @@
-include: package:lint/analysis_options.yaml
+include: package:very_good_analysis/analysis_options.yaml
 
 linter:
   rules:
-    prefer_const_constructors_in_immutables: false
-    avoid_void_async: false
-    sort_pub_dependencies: false
+    public_member_api_docs: false
