--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,8 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  easy_localization: ^3.0.0
   flutter:
-    sdk: flutter
-  flutter_localizations:
     sdk: flutter
   flutter_screenutil: ^5.0.0
   font_awesome_flutter: ^9.0.0
@@ -19,9 +18,9 @@ dependencies:
   url_strategy: ^0.2.0
 
 dev_dependencies:
+  flutter_native_splash: ^1.1.7+1
   flutter_test:
     sdk: flutter
-  flutter_native_splash: ^1.1.7+1
   very_good_analysis: ^2.1.0
 
 flutter:
